[gd_scene load_steps=11 format=3 uid="uid://d4gfgba08qkhb"]

[ext_resource type="Texture2D" uid="uid://bfb72phbii2d4" path="res://ASSETS/OBJECT/lttp_boomerang2x_spritesheet.png" id="1_llhlh"]
[ext_resource type="Script" uid="uid://5jddubnny35a" path="res://Character/Player/Abilities/boomerang.gd" id="1_nyjla"]
[ext_resource type="PackedScene" uid="uid://bf6fua2a2dkf5" path="res://Common/StunHurtbox/stun_hurt_box.tscn" id="3_uwcdl"]
[ext_resource type="AudioStream" uid="uid://q18lqwfybd0b" path="res://ASSETS/SOUNDS/boomerang.wav" id="4_elcni"]

[sub_resource type="Animation" id="Animation_85wvj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparkleMarker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 6)]
}

[sub_resource type="Animation" id="Animation_nyjla"]
resource_name = "throw"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparkleMarker2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.10000001, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(6, 6), Vector2(-6, 6), Vector2(-6, -6), Vector2(6, -6)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"make_sparkle"
}, {
"args": [],
"method": &"make_sparkle"
}, {
"args": [],
"method": &"make_sparkle"
}, {
"args": [],
"method": &"make_sparkle"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwqxj"]
_data = {
&"RESET": SubResource("Animation_85wvj"),
&"throw": SubResource("Animation_nyjla")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elcni"]
size = Vector2(15, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_uwcdl"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g4v3h"]
radius = 7.5

[node name="Boomerang" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5904
motion_mode = 1
wall_min_slide_angle = 0.87266463
script = ExtResource("1_nyjla")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_llhlh")
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_kwqxj")
}

[node name="SparkleMarker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(6, 6)

[node name="PlayerArea2D" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
shape = SubResource("RectangleShape2D_elcni")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_uwcdl")

[node name="StunHurtBox" parent="." instance=ExtResource("3_uwcdl")]
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="StunHurtBox"]
shape = SubResource("CircleShape2D_g4v3h")
debug_color = Color(0.70196074, 0.44011846, 0.47796848, 0.41960785)

[node name="BoomerangAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_elcni")
